smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/traits/annotation-unclosed-object3.smithy
// Syntax error at line 5, column 1: Expected COLON(':') but found EOF | Model
namespace com.foo
@foo(bar:
string MyString
